# KliNG

./: AboutDB.txt  CMakeLists.txt  kling.db  klingui.rc  main.cpp  mainwindow.cpp  mainwindow.h  testSync.sh
pixmap/: customIcon.qrc
src/: Shell.cpp  Shell.h  configSkeleton.h  cronparser.cpp  cronparser.h  dbusBridge.cpp  dbusBridge.h  manParser.cpp  manParser.h  session.cpp  session.h  shell.cpp  shell.h  thread.cpp  thread.h  virtTTY.cpp  virtTTY.h
src/interface/: abstractMonitor.cpp  abstractMonitor.h  addScript.cpp  addScript.h  advancedCronTaskManager.cpp  advancedCronTaskManager.h  advancedScriptManager.cpp  advancedScriptManager.h  commandList.cpp  commandList.h  commandMonitorItem.cpp  commandMonitorItem.h  completer.cpp  completer.h  config.cpp  config.h  cronMonitorItem.cpp  cronMonitorItem.h  debug.cpp  debug.h  debugTerm.cpp  debugTerm.h  defaultScreen.cpp  defaultScreen.h  executionMonitor.cpp  executionMonitor.h  fileBrowser.cpp  fileBrowser.h  history.cpp  history.h  info.htm  logView.cpp  logView.h  man.cpp  man.h  miniClasses.cpp  miniClasses.h  newCronJob.cpp  newCronJob.h  outputViewer.cpp  (+27 more)
src/interface/syntax/: bash.cpp  bash.h
src/shell/: alias.cpp  alias.h  defaultArgs.cpp  defaultArgs.h  function.h  processWatcher.cpp  processWatcher.h
